# ProxyEater

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: automatic-release.yml
ProxyEater/: Proxy.py  Scraper.py  __init__.py  __main__.py  sources.json
